package squire;

import javax.swing.JTextArea;
import javax.swing.JTextField;

public class AccountManager {
	
	public AccountManager(DBConnector dbc)
	{
		
	}
	
	
	private class userAccount {
		
	}
}

