@startuml
hide circle
hide empty members

class "Client" as sq

class "Server" as sqs{
	AccountManager
	ProjectManager
	Sockets
	AccountManagerMethods()
	ProjectManagerMethods()
	}

class "AccountManager" as uam{
	AccountList
	CreateAccount(Name, Email)
	Login(LoginInfo)
	Logout(UserGUID)
	GetUserDetails(Name)
	SetUserDetails(UserUpdateInfo)
	}
class "ProjectManager" as sqpm{
	ProjectList
	CreateProject(Name)
	OpenProject(Name)
	DeleteProject(Name)
	UpdateProject(ProjectUpdateInfo)
	}
class "Session" as ses{
	SessionGUID
	ProjectGUID
	UserGUID
	Socket
	}
class "UserAccount" as ua{
	UserGUID
	UserName
	DisplayName
	Biography
	Photo
	IsHost
	IsLoggedIn
	CurrentProjectGUID
	PrivateChatGUIDS
	GetUserName(UserGUID)
	GetUserGUID(Name)
	GetUserDetails(UserGUID)
	SetUserDetail(Key,Value)
	}
class "Project" as sqp{
	ProjectGUID
	ProjectDescription
	ProjectSettings
	ProjectFiles
	UpdateProject(Key,Value)
	UpdateFile(FileUpdateInfo)
	}

class "File" as sqf{
	FileGUID
	FileName
	FileDescription
	FileDataBase
	UpdateFile(Key,Value)
	}

class "UserUpdateInfo" as uaui{
	UserGUID
	UserKeyValuePairs
	}

class "ProjectUpdateInfo" as sqpui{
	ProjectGUID
	ProjectKeyValuePairs
	}

class "FileUpdateInfo" as sqfui{
	FileGUID
	EditKeyValuePairs
	}

sq -right- sqs : <<TCP>>

sqs *--- sqpm : 1
sqs *-- uam : 1

sqpm -left sqpui

ses .left. ua
ses .right. sqp

uam *-- ua : 0..*
uam - uaui

sqpm *-- sqp : 0..*

'sqp *-left- ua : Many
sqp *-- sqf : 0..*

sqp - sqfui



@enduml